# dariadb

./: .clang-format  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Changelog.md  LICENSE  NOTICE  README.md  indent.ps1  indent.sh
benchmarks/: CMakeLists.txt  aof_bench.cpp  aof_benchmark.cpp  b1.cpp  bench_common.cpp  bench_common.h  bucket_bench.cpp  bystep_benchmark.cpp  caches_bench.cpp  capacitor_bench.cpp  capacitor_benchmark.cpp  compression_bench.cpp  compression_benchmark.cpp  engine_benchmark.cpp  gbench_simple.cpp  hard_benchmark.cpp  integral_bench.cpp  integrall_bench.cpp  membucket_bench.cpp  memstorage_bench.cpp  memstorage_benchmark.cpp  memstorage_hard_benchmark.cpp  network_benchmark.cpp  page_benchmark.cpp  perf_benchmark.cpp  statistic_bench.cpp  statistic_benchmark.cpp  storage_bench.cpp  storage_hard_benchmark.cpp  thread_bench.cpp  utils_benchmark.cpp  wal_benchmark.cpp
examples/: CMakeLists.txt  README  README.md  embedded-create.cpp  embedded-interval.cpp  embedded-statistic.cpp  embedded-timepoint.cpp  embedded.cpp  main.cpp  memory-only.cpp  network.cpp  shard_embedded.cpp  shard_embeded.cpp
examples/go/: write.go
libdariadb/: .gitignore  CMakeLists.txt  append_result.h  bloom_filter.h  capacitor.cpp  capacitor.h  common.h  compression.cpp  compression.h  dariadb.cpp  dariadb.h  dariadb_net_ST_exports.h  dariadb_st_exports.h  engine.cpp  engine.h  exception.h  flags.h  integral.cpp  integral.h  meas.cpp  meas.h  memstorage.cpp  memstorage.h  page_manager.cpp  page_manager.h  query.cpp  query.h  query_param.cpp  shard.cpp  shard.h  stat.h  statistic.cpp  statistic.h  status.cpp  status.h  storage.cpp  storage.h  strategy.cpp  strategy.h  subscribe.cpp  (+8 more)
libdariadb/ads/: fixed_tree.h  lockfree_array.h  radix.h
libdariadb/aggregate/: aggregator.cpp  aggregator.h  itimer.cpp  itimer.h  timer.cpp  timer.h
libdariadb/compression/: base_compressor.cpp  base_compressor.h  binarybuffer.cpp  binarybuffer.h  bytebuffer.cpp  bytebuffer.h  compression.cpp  compression.h  ctz.h  cz.h  delta.cpp  delta.h  flag.cpp  flag.h  id.cpp  id.h  positions.h  xor.cpp  xor.h
libdariadb/engines/: engine.cpp  engine.h  shard.cpp  shard.h  strategy.cpp  strategy.h
libdariadb/interfaces/: icallbacks.cpp  icallbacks.h  ichunkcontainer.cpp  ichunkcontainer.h  icompactioncontroller.h  icompactlogic.h  icursor.cpp  icursor.h  idroppers.h  iengine.cpp  iengine.h  imeassource.cpp  imeassource.h  imeasstorage.cpp  imeasstorage.h  imeaswriter.cpp  imeaswriter.h  ireader.cpp  ireader.h
libdariadb/math/: statistic.cpp  statistic.h
libdariadb/net/: async_connection.cpp  async_connection.h  client.cpp  client.h  common.h  net_common.cpp  net_common.h  net_data.cpp  net_data.h  server.cpp  server.h
libdariadb/scheme/: helpers.cpp  helpers.h  ischeme.h  scheme.cpp  scheme.h
libdariadb/statistic/: calculator.cpp  calculator.h  functions.cpp  functions.h  ifunction.cpp  ifunction.h
libdariadb/storage/: allocators.cpp  allocators.h  aof_manager.cpp  aof_manager.h  aofile.cpp  aofile.h  bloom_filter.h  callbacks.cpp  callbacks.h  capacitor.cpp  capacitor.h  capacitor_manager.cpp  capacitor_manager.h  chunk.cpp  chunk.h  chunk_by_time_map.cpp  chunk_by_time_map.h  chunk_container.cpp  chunk_container.h  chunkcontainer.cpp  chunkcontainer.h  cola.cpp  cola.h  cursor.cpp  cursor.h  cursors.cpp  cursors.h  dropper.cpp  dropper.h  dropper_description.h  droppers.cpp  droppers.h  engine_environment.cpp  engine_environment.h  flush_model.cpp  flush_model.h  fs.cpp  fs.h  index.cpp  index.h  (+35 more)
libdariadb/utils/: asyncworker.h  bitoperations.h  cola.cpp  cola.h  coroutine.cpp  coroutine.h  crc.cpp  crc.h  cz.h  exception.h  fs.cpp  fs.h  fs_linux.cpp  fs_win32.cpp  in_interval.h  jenkins_hash.h  kmerge.h  locker.cpp  locker.h  logger.cpp  logger.h  lru.h  metrics.cpp  metrics.h  period_worker.cpp  period_worker.h  pool.cpp  pool.h  radix.h  skiplist.h  spinlock.cpp  spinlock.h  strings.cpp  strings.h  striped_map.h  thread_manager.cpp  thread_manager.h  thread_pool.cpp  thread_pool.h  utils.cpp  (+1 more)
libmemseries/: CMakeLists.txt  binarybuffer.cpp  binarybuffer.h  bucket.cpp  bucket.h  capacitor.cpp  capacitor.h  common.h  compression.cpp  compression.h  exception.h  flags.h  integral.cpp  integral.h  integrall.cpp  integrall.h  logger.cpp  logger.h  meas.cpp  meas.h  membucket.cpp  membucket.h  memseries.h  memstorage.cpp  memstorage.h  storage.cpp  storage.h  subscribe.cpp  subscribe.h  time_ordered_set.cpp  time_ordered_set.h  timeutil.cpp  timeutil.h  utils.cpp  utils.h
libmemseries/compression/: base_compressor.cpp  base_compressor.h  binarybuffer.cpp  binarybuffer.h  delta.cpp  delta.h  flag.cpp  flag.h  xor.cpp  xor.h
libtimedb/: CMakeLists.txt  common.h  compression.cpp  compression.h  exception.h  logger.cpp  logger.h  meas.cpp  meas.h  storage.cpp  storage.h  timedb.h  utils.cpp  utils.h
microbenchmarks/: CMakeLists.txt  common.cpp  common.h  compression.cpp  crc.cpp  cursors.cpp  hash.cpp  main.cpp  memstorage.cpp  network.cpp  statistic.cpp  timeutil.cpp
network/: CMakeLists.txt
tests/: CMakeLists.txt  aof_test.cpp  bucket_test.cpp  bystep_storage_test.cpp  capacitor_test.cpp  cascading_test.cpp  clmn_storage_test.cpp  compression_test.cpp  engine_test.cpp  gtest_example.cpp  http_test.cpp  integral_test.cpp  integrall_test.cpp  membucket_test.cpp  memstorage_test.cpp  net_test.cpp  pages_test.cpp  scheme_test.cpp  shard_engine_test.cpp  statistic_test.cpp  storage_common_test.cpp  storage_test.cpp  test_common.cpp  test_common.h  union_storage_test.cpp  utils_test.cpp  wal_test.cpp
tools/: CMakeLists.txt  page_info.cpp
unittests/: CMakeLists.txt  aggregate_test.cpp  cola_test.cpp  compression_test.cpp  crc_test.cpp  engine_test.cpp  helpers.cpp  helpers.h  http_test.cpp  kvs_test.cpp  main.cpp  memstorage_test.cpp  net_test.cpp  pages_test.cpp  scheme_test.cpp  shard_engine_test.cpp  statistic_test.cpp  storage_common_test.cpp  stripped_map_test.cpp  timeutil_test.cpp  utils.cpp  utils_test.cpp  volume_test.cpp  wal_test.cpp
(+156 files in other folders)
