include(GenerateExportHeader)

INCLUDE_DIRECTORIES(${DARIADB_STORAGE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${DARIADB_NETWORK_INCLUDE_DIR})

FILE(GLOB GLOB_HDRS "*.h")
FILE(GLOB GLOB_SRC "*.cpp")

add_executable(dariadb ${GLOB_SRC} ${GLOB_HDRS})
TARGET_LINK_LIBRARIES(dariadb libnet-server libcommon-net ${DARIADB_STORAGE_LIBS})

GENERATE_EXPORT_HEADER(libcommon-net
    BASE_NAME libcommon-net
    EXPORT_MACRO_NAME DARIADBNET_CMN_EXPORTS
    EXPORT_FILE_NAME dariadb_net_cmn_exports.h
    STATIC_DEFINE SHARED_EXPORTS_BUILT_AS_STATIC)